# dgc-contract

./: README.md  dgc.yaml  docker-compose-installed.yaml  docker-compose.yaml  pike.yaml
addresser/: Cargo.toml
addresser/src/: lib.rs
api/: Cargo.toml  build.rs  openapi.yaml
api-backup/: Cargo.toml  Dockerfile-installed-bionic  Dockerfile-installed-xenial
api-backup/src/: error.rs  main.rs  openapi.rs
api-backup/src/guard/: db_conn.rs
api-backup/src/routes/: agents.rs  organizations.rs  transactions.rs
api/src/: auth.rs  config.rs  do_create.rs  error.rs  errors.rs  handler.rs  lib.rs  main.rs  openapi.rs  schema.rs  submit.rs  submit_batch_list.rs  transaction.rs
api/src/routes/: agents.rs  articles.rs  mod.rs  organizations.rs  profiles.rs  tags.rs  transactions.rs  users.rs
api/src/trans/: mod.rs
api/src/transactions/: key.rs  mod.rs
cli/: Cargo.toml  Dockerfile  Dockerfile-installed-bionic  Dockerfile-installed-xenial
cli/src/: main.rs  payload.rs  submit.rs  transaction.rs
db/: 01-create-pike.sql
db/dgc_db/src/: agents_helper.rs  orgs_helper.rs  sp_helper.rs
db/pike_db/: Cargo.toml
db/scripts/: create_sample_data  create_sample_data.sql
docs/: Makefile
docs/source/: conf.py  dgc_transaction_family.rst  index.rst
examples/: Dockerfile
examples/intkey/: Cargo.toml
examples/intkey/src/: lib.rs
examples/proposal_permission/: Cargo.toml
examples/proposal_permission/src/: lib.rs
examples/white_list_permission/: Cargo.toml  build.rs
examples/white_list_permission/src/: lib.rs
protos/: payload.proto  state.proto
realworld-rust-rocket/src/: lib.rs
sp_sdk/: Cargo.toml
sp_sdk/src/: externs.rs  lib.rs
state_delta_export/: Cargo.toml  Dockerfile  Dockerfile-installed-bionic  Dockerfile-installed-xenial
state_delta_export/src/: database.rs  main.rs  subscriber.rs
state_delta_export/src/protos/: payload.rs  state.rs
tp/: Cargo.toml  Dockerfile  Dockerfile-installed-bionic  Dockerfile-installed-xenial  build.rs
tp/src/: handler.rs  main.rs
