# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-api"
version = "0.0.0"
authors = ["dgc.network"]

[dependencies]
rocket = "0.4.2"
#rocket_codegen = "0.3.8"
rocket_cors = "0.5.1"
serde = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
serde_derive = "1.0"
sawtooth-sdk = {git = "https://github.com/hyperledger/sawtooth-sdk-rust"}
dgc_db = { path = "../db/dgc_db/" }
protobuf = "2"
uuid = { version = "0.5", features = ["v4"] }

#sawtooth-sdk = {git = "https://github.com/hyperledger/sawtooth-sdk-rust"}
addresser = {path = "../addresser"}
#protobuf = "2"
clap = "2"
rust-crypto = "0.2"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
tokio-timer = "0.1"
users = "0.6"
dirs = "2.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[build-dependencies]
protoc-rust = "2"
