# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pike-sde"
version = "0.1.0"
authors = ["dgc.network"]
build = "build.rs"

[dependencies]
sawtooth-sdk = {git = "https://github.com/hyperledger/sawtooth-sdk-rust"}
pike_db = { path = "../db/pike_db/" }
addresser = { path = "../addresser/" }
log = "0.3.8"
simple_logger = "0.4.0"
clap = "2"
protobuf = "2"
uuid = { version = "0.5", features = ["v4"] }
chan-signal = "0.3.1"
regex = "0.2.3"
serde_json = "1.0"

[build-dependencies]
protoc-rust = "2"
