# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc"
version = "0.1.0"
authors = ["Cargill Incorporated"]
build = "build.rs"

[dependencies]
protobuf = "2"
cfg-if = "0.1"
hex = "0.3.1"
addresser = {path = "../addresser"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
rust-crypto-wasm = "0.3"
#sabre-sdk = {path = "../../../sdk"}
sabre-sdk = {git = "https://github.com/hyperledger/sawtooth-sabre"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sawtooth-sdk = {git = "https://github.com/hyperledger/sawtooth-sdk-rust"}
log = "0.3.8"
log4rs = "0.7.0"
simple_logger = "0.4.0"
clap = "2"
rust-crypto = "0.2.36"


[build-dependencies]
protoc-rust = "2"
