# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "proposal_permission"
version = "0.1.0"
authors = ["dgc.network"]

[dependencies]
#sabre-sdk = { path = "../../../../sdk" }
sabre-sdk = {git = "https://github.com/hyperledger/sawtooth-sabre"}
protobuf = "1.4"

[build-dependencies]
protoc-rust = "1.4"

[lib]
crate-type = ["cdylib"]
